<resources>
    <string name="app_name">Glossary</string>
    <string name="Boton">Boton</string>
    <string name="tv_Titulo">Glossary</string>
    <string name="iv_Descripcion">-</string>
    <string name="tv_SplashScreen">from\nJD&amp;ED</string>

    <string name="boton_Vocabulary">Vocabulary</string>
    <string name="boton_Add">Add Words</string>
    <string name="boton_Search">Search Word</string>
    <string name="boton_Links">Links of\nInterest</string>

    <string name="tv_English">English:</string>
    <string name="tv_Spanish">Spanish:</string>
    <string name="tv_Definition">Definition:</string>
    <string name="tv_HyperLink">HyperLink:</string>

    <string name="tv_Title">Title:</string>
    <string name="tv_Url">Url:</string>
    <string name="tv_Description">Description:</string>

    <string name="boton_Save">Save</string>
    <string name="boton_SearchWord">Search</string>

    <string name="tv_Asignat">Ing Informatica</string>
    <string name="tv_Asignatura">Ingles Técnico</string>
    <string name="tv_Miem">Miembros del grupo:</string>
    <string name="tv_Miembros">José Daniel Fuentes\nElvis David Nogueiras</string>
    <string name="tv_Ull">Universidad De La Laguna</string>


</resources>