<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoActivity"
    tools:context=".VerInfo">


    <TextView
        android:id="@+id/tv_VerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_Logo_Info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Titulo"
        android:textColor="@color/tvTitulos"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Asignatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_VerInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Asignat"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Asignat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Asignatura"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Asignatura"
        android:textColor="@color/tvTitulos"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Miem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Asignat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Miem"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Miembros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Miem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Miembros"
        android:textColor="@color/tvTitulos"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_Logo_Ull"
        android:layout_width="163dp"
        android:layout_height="128dp"
        android:layout_below="@+id/tv_Miembros"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/iv_Descripcion"
        app:srcCompat="@drawable/ull_logo" />

    <TextView
        android:id="@+id/tv_Ull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_Logo_Ull"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/tv_Ull"
        android:textColor="@color/tvTitulos"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_Logo_Info"
        android:layout_width="163dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/iv_Descripcion"
        app:srcCompat="@drawable/libro" />

    <ImageButton
        android:id="@+id/BotonVolverInfo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_small"
        android:contentDescription="@string/Boton"
        android:onClick="BotonVolver"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/volver" />
</RelativeLayout>