<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoActivity"
    tools:context=".ViewLink">

    <TextView
        android:id="@+id/tv_Tit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:text="@string/tv_Title"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/tv_Ur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/tv_Title"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Url"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/tv_Tit"
        android:layout_marginTop="20dp"
        android:text="@string/iv_Descripcion"
        android:textColor="@color/tvTitulos"
        android:textSize="30sp"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/tv_Url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/tv_Ur"
        android:layout_marginTop="20dp"
        android:text="@string/iv_Descripcion"
        android:textColor="@color/tvTitulos"
        android:textSize="30sp"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/tv_Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/tv_Url"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Description"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/tv_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Desc"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/iv_Descripcion"
        android:textColor="@color/tvTitulos"
        android:textSize="30sp"
        app:fontFamily="monospace" />

    <ImageButton
        android:id="@+id/BotonVolverViewLink"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_small"
        android:contentDescription="@string/Boton"
        android:onClick="BotonVolver"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/volver" />
</RelativeLayout>