<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoActivity"
    tools:context=".BuscarPalabra">


    <TextView
        android:id="@+id/tv_EngSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/tv_English"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/tv_SpaSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_EnglishSearch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Spanish"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:fontFamily="monospace" />

    <EditText
        android:id="@+id/tv_EnglishSearch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_EngSearch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/tvTitulos"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/tvTitulos"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tv_SpanishSearch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_SpaSearch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/tvTitulos"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/tvTitulos"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Boton_Buscar"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_small"
        android:onClick="BotonBuscar"
        android:text="@string/boton_SearchWord"
        android:textSize="18sp"
        app:fontFamily="monospace" />

    <ImageButton
        android:id="@+id/BotonVolverBuscar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_small"
        android:contentDescription="@string/Boton"
        android:onClick="BotonVolver"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/volver" />


</RelativeLayout>